# salt-samba-ad

./: .gitignore  README.md  pyproject.toml
_modules/: samba_group.py  samba_user.py
