[project]
name = ""
version = ""
description = ""
authors = [
    {name = "James Sweet", email = "james.sweet88@gmail.com"},
]
dependencies = [
    "salt>=3004.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
